--- a/customers/templates/customers/home.html
+++ b/customers/templates/customers/home.html
@@ -5,8 +5,8 @@
 {% block content %}
 
 	<!-- ##### Welcome Area Start ##### -->
-    <section class="welcome_area bg-img background-overlay" style="background-image: url({% static 'assets' %}/img/bg-img/bg-1.jpg);">
-        <div class="container h-100">
+    <section class="welcome_area bg-img background-overlay" style="background-image: url({% static 'assets' %}/img/bg-img/big-1.jpg);">
+        <div class="container h-100" style="padding-left: 5vw;">
             <div class="row h-100 align-items-center">
                 <div class="col-12">
                     <div class="hero-content">
@@ -24,16 +24,30 @@
     <div class="top_catagory_area section-padding-80 clearfix">
         <div class="container">
             <div class="row justify-content-center">
-            	{% for category in categories %}
                 <!-- Single Catagory -->
                 <div class="col-12 col-sm-6 col-md-4">
-                    <div class="single_catagory_area d-flex align-items-center justify-content-center bg-img" style="background-color: cadetblue">
+                    <div class="single_catagory_area d-flex align-items-center justify-content-center bg-img" style="background-image: url({% static 'assets' %}/img/bg-img/bg-3.jpg);">
                         <div class="catagory-content">
-                            <a href="{{ category.get_absolute_url }}">{{ category.name }}</a>
+                            <a href="{% url 'shop:product_list' %}">Tissues</a>
                         </div>
                     </div>
                 </div>
-                {% endfor %}
+                <!-- Single Catagory -->
+                <div class="col-12 col-sm-6 col-md-4">
+                    <div class="single_catagory_area d-flex align-items-center justify-content-center bg-img" style="background-image: url({% static 'assets' %}/img/bg-img/bg-2.jpg);">
+                        <div class="catagory-content">
+                            <a href="{% url 'shop:product_list' %}">Water</a>
+                        </div>
+                    </div>
+                </div>
+                <!-- Single Catagory -->
+                <div class="col-12 col-sm-6 col-md-4">
+                    <div class="single_catagory_area d-flex align-items-center justify-content-center bg-img" style="background-image: url({% static 'assets' %}/img/bg-img/bg-4.jpg);">
+                        <div class="catagory-content">
+                            <a href="{% url 'shop:product_list' %}">Misc.</a>
+                        </div>
+                    </div>
+                </div>
             </div>
         </div>
     </div>
