--- a/orders/templates/orders/order/created.html
+++ b/orders/templates/orders/order/created.html
@@ -12,7 +12,7 @@
                     <div class="hero-content">
                         <h2>Thank You For Shopping With Us</h2>
                         <p class="lead">
-                        Your order has been successfully completed. Your order number is <strong>{{ order.id }}</strong>.
+                        Your order has been successfully placed. Your order number is <strong>{{ order.id }}</strong>.
                       </p>
                     </div>
                 </div>
