--- a/templates/faq.html
+++ b/templates/faq.html
@@ -7,7 +7,7 @@
 
         <!-- Single Blog Post Thumb -->
         <div class="single-blog-post-thumb">
-            <img src="{% static 'assets' %}/img/bg-img/bg-8.jpg" alt="">
+            <img src="{% static 'assets' %}/img/bg-img/bgs-8.jpg" alt="">
         </div>
 
         <div class="container">
