--- a/paytm/templates/paytm/payment.html
+++ b/paytm/templates/paytm/payment.html
@@ -1,6 +1,25 @@
-<html>
-   <center> <h1>The Water Company<br><br> Merchant Check Out Page<br><br> Please Do Not Refresh The Page</h1></br></center>
-    <form method="post" action="https://securegw-stage.paytm.in/theia/processTransaction" name="f1">
+{% load static %}
+<!doctype html>
+<html lang="en">
+<head>
+  <meta charset="utf-8">
+  <meta name="viewport" content="width=device-width, initial-scale=1, shrink-to-fit=no">
+  <title>The Water Company</title>
+  <link href="https://fonts.googleapis.com/css?family=Clicker+Script" rel="stylesheet">
+  <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/4.0.0-beta.3/css/bootstrap.min.css" integrity="sha384-Zug+QiDoJOrZ5t4lssLdxGhVrurbmBWopoEl+M6BdEfwnCJZtKxi1KgxUyJq13dy" crossorigin="anonymous">
+</head>
+<body>
+  <div class="container" style="margin-top: 8rem">
+    <div class="row justify-content-center text-center">
+      <div class="col-md-10 col-sm-12">
+        <h1 class="display-1 logo mb-5">The Water Company</h1>
+        <h2 class="display-5">Your Transaction is being Processed.</h2>
+          <img src="{% static 'assets' %}/img/core-img/loading.gif" width="200">
+        <p class="lead">Please Wait...</p>
+      </div>
+    </div>
+  </div>
+  <form method="post" action="https://securegw-stage.paytm.in/theia/processTransaction" name="f1">
     <table border="1">
     <tbody>
         {% for key,value in paytmdict.items %}
@@ -9,7 +28,9 @@
     </tbody>
     </table>
     <script type="text/javascript">
-        document.f1.submit();
+        setTimeout(function(){ document.f1.submit(); }, 3000);
+        
     </script>
     </form>
+</body>
 </html>
