--- a/paytm/templates/paytm/response.html
+++ b/paytm/templates/paytm/response.html
@@ -1,25 +1,32 @@
-<html>
+{% load static %}
+<!doctype html>
+<html lang="en">
 <head>
-    <meta http-equiv="Content-Type" content="text/html; charset=ISO-8859-1">
-    <title>Paytm Secure Online Payment Gateway</title>
+  <meta charset="utf-8">
+  <meta name="viewport" content="width=device-width, initial-scale=1, shrink-to-fit=no">
+  <title>The Water Company</title>
+  <link href="https://fonts.googleapis.com/css?family=Clicker+Script" rel="stylesheet">
+  <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/4.0.0-beta.3/css/bootstrap.min.css" integrity="sha384-Zug+QiDoJOrZ5t4lssLdxGhVrurbmBWopoEl+M6BdEfwnCJZtKxi1KgxUyJq13dy" crossorigin="anonymous">
 </head>
 <body>
-<table align='center'>
-    <tr>
-        <td><STRONG>Transaction is being processed,</STRONG></td>
-    </tr>
-    <tr>
-        <td><font color='blue'>Please wait ...</font></td>
-    </tr>
-    <tr>
-        <td>(Please do not press 'Refresh' or 'Back' button</td>
-    </tr>
-</table>
-<FORM NAME='TESTFORM' ACTION="{% url 'paytm:status' %}"  METHOD='POST'>{% csrf_token %}
+  <div class="container" style="margin-top: 8rem">
+    <div class="row justify-content-center text-center">
+      <div class="col-md-10 col-sm-12">
+        <h1 class="display-1 logo mb-5">The Water Company</h1>
+        <h2 class="display-5">Your Transaction is being Processed.</h2>
+
+      <img src="{% static 'assets' %}/img/core-img/loading.gif" width="200">
+        <p class="lead">Please Wait...</p>
+      </div>
+    </div>
+  </div>
+  <FORM NAME='TESTFORM' ACTION="{% url 'paytm:status' %}"  METHOD='POST'>{% csrf_token %}
     {% for key,value in paytm.items %}
         <input type='hidden' name='{{key}}' value='{{ value }}'><br>
     {% endfor %}
 </FORM>
 </body>
-<script type="text/javascript">  document.forms[0].submit();</script>
+<script type="text/javascript">
+        setTimeout(function(){ document.forms[0].submit(); }, 3000);
+</script>
 </html>
