UI fixes and changed .gitignore

--- a/chat/templates/chat/room.html
+++ b/chat/templates/chat/room.html
@@ -80,7 +80,7 @@
   {% else %}
     <a href="{% url 'chat:support_success' %}" class="close" onclick="custDisc()"></a>
   {% endif %}
-  <div id="frame" style="display: none;" class="border">
+  <div id="frame" style="display: none;">
     <div class="responsive-html5-chat">
     </div>
   </div>
