--- a/customers/templates/customers/items_list.html
+++ b/customers/templates/customers/items_list.html
@@ -6,7 +6,8 @@
 
   <h2 class="mb-3 mt-100 ml-30">Order {{ items.first.order.id }}</h2> 
   <div class="card mr-50 ml-50 mb-30">
-    <table class="table mb-0">
+    <div class="responsive-table">
+    <table class="table">
       <thead>
         <tr>
           <th>Product</th>
@@ -37,6 +38,7 @@
           </tr>
         {% endfor %}</tbody>
     </table>
+  </div>
   </div>
   <br/>
   <div class="card mr-50 ml-50 mb-30">
