--- a/executives/templates/executives/prds_list.html
+++ b/executives/templates/executives/prds_list.html
@@ -30,6 +30,7 @@
                     <!-- end pageheader  -->
                     <!-- ============================================================== -->
                     <a href="{% url 'executive:create_product' %}" class="btn btn-primary mb-3" role="button">Add Product</a>
+                    <a href="{% url 'executive:create_subscription' %}" class="btn btn-primary mb-3" role="button">Add Subscription</a>
                         <div class="col-xl-12 col-lg-12 col-md-12 col-sm-12 col-12">
                             <div class="card border-3 border-top border-top-primary">
                                 <h5 class="card-header">All Products</h5>
