--- a/templates/agent_base.html
+++ b/templates/agent_base.html
@@ -29,7 +29,7 @@
         <!-- ============================================================== -->
         <div class="dashboard-header">
             <nav class="navbar navbar-expand-lg bg-white fixed-top">
-                <a class="navbar-brand" href="{% url 'home' %}"><img src="{% static 'assets' %}/img/core-img/logo.png" alt="" width="111"></a>
+                <a class="navbar-brand" href="{% url 'home' %}"><img src="{% static 'executive/assets/images' %}/logo.png" alt="" width="111"><span style="font-size:20px;line-height: 35px;color: #CD2126">Agent</span></a>
                 <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarSupportedContent" aria-controls="navbarSupportedContent" aria-expanded="false" aria-label="Toggle navigation">
                     <span class="navbar-toggler-icon"><i class="fas fa-fw fa-bell"></i> <span id="indic1"></span>
                 </button>
