--- a/customers/templates/customers/track.html
+++ b/customers/templates/customers/track.html
@@ -1,4 +1,4 @@
-  <div style="display: none;" id="wait">Tracking not available yet.</div>
+  <div style="display: none;" id="wait">Tracking not available.</div>
   <div id="mapdiv"></div>
   <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.3.1/jquery.min.js"></script>
   <script src="http://www.openlayers.org/api/OpenLayers.js"></script>
@@ -12,8 +12,9 @@
     map.addLayer(markers);
     $(window).on('load', getAndPlotPoint);
     setInterval(getAndPlotPoint, 10000);
+    var origin   = window.location.origin + '/api/track/get_coords/{{order.id}}';
     function getAndPlotPoint(){
-      $.getJSON('http://localhost:8000/api/track/get_coords/{{order.id}}', function (data) {
+      $.getJSON(origin, function (data) {
         if(data['enabled'] === 'False'){
           document.querySelector('#wait').style.display = 'block';
           document.querySelector('#mapdiv').style.display = 'none';
