--- a/executives/templates/executives/create_sub.html
+++ b/executives/templates/executives/create_sub.html
@@ -17,7 +17,7 @@
                                     <nav aria-label="breadcrumb">
                                         <ol class="breadcrumb">
                                             <li class="breadcrumb-item"><a href="{% url 'executive:home' %}" class="breadcrumb-link">My Dashboard</a></li>
-                                            <li class="breadcrumb-item"><a href="{% url 'executive:subscriptions' %}" class="breadcrumb-link">All Subscriptions</a></li>
+                                            <li class="breadcrumb-item"><a href="{% url 'executive:product' %}" class="breadcrumb-link">All Products</a></li>
                                             <li class="breadcrumb-item active" aria-current="page">Add A Subscription</li>
                                         </ol>
                                     </nav>
@@ -47,4 +47,23 @@
                                 </div>
                             </div>
                         </div>
+                    </div>
+                    </div>
+                </div>
+{% endblock %}
+{% block script %}
+<script type="text/javascript">
+function convertToSlug(Text)
+{
+    return Text
+        .toLowerCase()
+        .replace(/[^\w ]+/g,'')
+        .replace(/ +/g,'-')
+        ;
+}
+$("#id_name").keyup(function(){
+    var Text = $(this).val();
+    $("#id_slug").val(convertToSlug(Text));    
+});
+</script>
 {% endblock %}
