--- a/executives/templates/executives/subs_list.html
+++ b/executives/templates/executives/subs_list.html
@@ -29,8 +29,7 @@
                     <!-- ============================================================== -->
                     <!-- end pageheader  -->
                     <!-- ============================================================== -->
-                    <a href="{% url 'executive:create_subscription' %}" class="btn btn-primary mb-3" role="button">Add Subscription</a>
-                        <div class="col-xl-12 col-lg-12 col-md-12 col-sm-12 col-12">
+                    <div class="col-xl-12 col-lg-12 col-md-12 col-sm-12 col-12">
                             <div class="card border-3 border-top border-top-primary">
                                 <h5 class="card-header">All Subscriptions</h5>
                                 <div class="card-body p-0">
@@ -38,21 +37,18 @@
                                         <table class="table" style="text-align: center;">
                                             <thead class="bg-light">
                                                 <tr class="border-0">
-                                                    <th class="border-0">Name</th>
-                                                    <th class="border-0">Description</th>
-                                                    <th class="border-0">Price</th>
-                                                    <th></th>
+                                                    <th class="border-0">Customer</th>
+                                                    <th class="border-0">Subscription</th>
+                                                    <th class="border-0">Number of cans claimed</th>
+                                                    
                                                 </tr>
                                             </thead>
                                             <tbody>
                                               {% for sub in subs %}
                                                 <tr>
-                                                <td class="align-middle">{{ sub.name }}</td>
-                                                <td class="align-middle">{{ sub.description }}</td>
-                                                <td class="align-middle">{{ sub.price }}</td>
-                                                <td class="text-right">
-                                                  <a href="{% url 'executive:deletesubscription' id=sub.id %}"><button type="submit" class="btn btn-danger">Delete</button></a>
-                                                </td>
+                                                <td class="align-middle">{{ sub.customer }}</td>
+                                                <td class="align-middle">{{ sub.subscription }}</td>
+                                                <td class="align-middle">{{ sub.number_of_cans }}</td>
                                               </tr>
                                                 {% empty %}
                                                 <tr>
