--- a/feedback/templates/feedback/feedback.html
+++ b/feedback/templates/feedback/feedback.html
@@ -13,7 +13,7 @@
       </button>
     </div>
   {% endif %}
-  <section class="welcome_area bg-img background-overlay" style='background-image: url({% static "assets" %}/img/bg-img/bg-1.jpg);min-height: 700px'>
+  <section class="welcome_area bg-img background-overlay" style='background-image: url({% static "assets" %}/img/bg-img/bg-1.jpg);min-height: 85vh'>
         <div class="container h-100">
             <div class="row h-100 align-items-center">
                 <div class="col-12">
