--- a/orders/templates/orders/partyOrder.html
+++ b/orders/templates/orders/partyOrder.html
@@ -13,7 +13,7 @@
       </button>
     </div>
   {% endif %}
-  <section class="welcome_area bg-img background-overlay" style='background-image: url({% static "assets" %}/img/bg-img/bg-1.jpg);'>
+  <section class="bg-img background-overlay" style='background-image: url({% static "assets" %}/img/bg-img/bg-1.jpg);'>
         <div class="container h-100">
             <div class="row h-100 align-items-center">
                 <div class="col-12">
