--- a/static/assets/css/core-style.css
+++ b/static/assets/css/core-style.css
@@ -635,6 +635,7 @@ img {
   position: relative;
   z-index: 1;
   width: 100%;
+  overflow-y: auto;
   height: 600px; }
   @media only screen and (min-width: 768px) and (max-width: 991px) {
     .welcome_area {
