--- a/templates/registration/details.html
+++ b/templates/registration/details.html
@@ -3,7 +3,7 @@
 {% load crispy_forms_tags %}
 
 {% block content %}
-<section class="welcome_area bg-img background-overlay" style='background-image: url({% static "assets" %}/img/bg-img/bg-1.jpg);min-height: 1000px;'>
+<section class="bg-img background-overlay" style='background-image: url({% static "assets" %}/img/bg-img/bg-1.jpg);'>
         <div class="container h-100">
             <div class="row h-100 align-items-center">
                 <div class="col-12">
