--- a/executives/templates/executives/subs_list.html
+++ b/executives/templates/executives/subs_list.html
@@ -39,7 +39,7 @@
                                                 <tr class="border-0">
                                                     <th class="border-0">Customer</th>
                                                     <th class="border-0">Subscription</th>
-                                                    <th class="border-0">Number of cans claimed</th>
+                                                    <th class="border-0">Number of cans unclaimed</th>
                                                     
                                                 </tr>
                                             </thead>
