--- a/templates/home.html
+++ b/templates/home.html
@@ -35,6 +35,7 @@
   overflow-y: auto;
   /* Set the perspective to 2px. This is essentailly the simulated distance from the viewport to transformed objects.*/
   perspective: 2px;
+  -webkit-overflow-scrolling: touch;
 }
 </style>
     <!-- ##### Header Area Start ##### -->
